# Smart-Photo-Sorter

./: .gitignore  Entity_Controller.py  README.md  gitignore  pyproject.toml  requirements.txt
controllers/: photo_manager.py  tag_manager.py
examples/: demo_upload.py
models/: photo.py  tag.py  user.py
src/backend/: main.py
src/backend/api/: album.py  auth.py  duplicates.py  photo.py  upload.py
src/backend/core/: hash_utils.py  security.py
src/backend/services/: ai_service.py  supabase_client.py
src/backend/static/: album.js  modal.js  style.css  upload.js
src/backend/templates/: album.html  base.html  main.html  photo.html
src/smart_photo_sorter/: __init__.py
src/smart_photo_sorter/boundary/: photo_upload_ui.py
src/smart_photo_sorter/controller/: photo_controller.py  photo_manager.py  tag_controller.py
src/smart_photo_sorter/entity/: photo.py  tag.py  user.py
src/smart_photo_sorter/infra/: storage.py
src/smart_photo_sorter/service/: ai_service.py
tests/: test_upload_flow.py
